--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@ input {
     width: 1140px;
     margin: 0 auto;
 }
+.center {
+    padding-left: calc(50% - 580px);
+padding-right: calc(50% - 580px);
+}
+
 .headerMenu {
     display: flex;
     justify-content: space-between;
@@ -441,11 +446,12 @@ line-height: 17px;
 .icon-box:hover .fab {
     color: #ffffff;
     }
-.breadcrumb {
+.breadcrumb1 {
     height: 148px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: #F8F3F4;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 .newArrivalsLink {
@@ -697,19 +703,30 @@ padding: 0 17px 21px 16px;
     margin-top: 41px;
 }
 .pagination {
-    display: inline-block;
-    border:1px solid #EBEBEB;
-   margin: 0 auto; 
-   padding: 12px;
-   
-
+  display: block;
+  width:284px;
+  text-align: center;
+  border:1px solid #EBEBEB;
+  margin: 0 auto; 
+padding: 12px;
+margin-bottom: 96px;
 }
+
 .pageItem {
 font-size: 16px;
    line-height: 19px;
    color: #C4C4C4;
    margin-right: 20px;
 }
+.pageItem:last-child {
+    margin-right: 0;
+}
 .pageItem:hover {
+    color: #EF5870;
+}
+.fas {
+    color: #000000;
+}
+.fas:hover {
     color: #EF5870;
 }
