--- a/style.css
+++ b/style.css
@@ -815,7 +815,7 @@ color: #575757;
 }
 .checkOutBox {
     margin-top: 57px;
-    background-color: #F5F3F3;
+    margin-bottom: 96px;
 }
 .subTotal {
     font-size: 11px;
@@ -876,6 +876,49 @@ ul > .loyality_list_item:before{
         color: #ffffff;
         margin-left: 20px;
         font-size: 12px;
+    }
+    .sex {
+ margin-right: 10px;
+        font-weight: 300;
+    font-size: 11px;
+    line-height: 13px;
+    color: #000000;
+    margin-bottom: 33px;
+    margin-top: 31px;
+    }
+    .sex:active {
+        color: #222222
+      }
+      .male {
+          margin-right: 20px;
+      }
+
+          input[type='radio']:after {
+        width: 15px;
+        height: 15px;
+        border-radius: 15px;
+        top: -2px;
+        left: -1px;
+        position: relative;
+        background-color: #d1d3d1;
+        content: '';
+        display: inline-block;
+        visibility: visible;
+        border: 2px solid white;
+    }
+
+    input[type='radio']:checked:after {
+        width: 15px;
+        height: 15px;
+        border-radius: 15px;
+        top: -2px;
+        left: -1px;
+        position: relative;
+        background-color: #222222;
+        content: '';
+        display: inline-block;
+        visibility: visible;
+        border: 2px solid white;
     }
 
     @media (min-width: 375px) 
@@ -978,6 +1021,7 @@ line-height: 17px;
     flex-direction: column;
     justify-content: space-around;
 }
+
 
 
 }
