--- a/style.css
+++ b/style.css
@@ -43,17 +43,61 @@ padding-right: calc(50% - 580px);
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+    position: relative;
+}
+.rightMenu {
+    width: 232px;
+    height: 764px;
+    background-color: #fff;
+    position: absolute;
+    top: 9999999999px;
+    right: auto;
+    display: flex;
+    flex-direction: column;
+    padding: 34px;
+   }
+   #switcher:checked ~ .rightMenu {
+       top: 51px;
+       height: 698px;
+       right: auto;
+       z-index: 9999999;
+       box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+   }
+
+   .rightMenu_items_header {
+    font-size: 14px;
+    line-height: 17px;
+    color: #F16D7F;
+    
+   }
+.rightMenu_divs, .rightMenu_subdivs {
+    list-style: none;
+    padding-inline-start: 0;
+}
+.rightMenu_items {
+    color: #6F6E6E;
+    padding: 6px;
+}
+.rightMenu_items:hover {
+    color:#EF5870;
+}
+#switcher {
+    position: absolute;
+    left: -999999px;
+    visibility: hidden;
 }
 .main {
-    display: flex;
-    height: 764px;
+       height: 764px;
     background-color: #F1E4E6;
     }
+.bannerBox {
+    display: flex;
+}
 .mainPhoto {
     height: 764px;
-    width: 800px;
+    width: 100%;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     background-image: url(img/Layer_57-removebg-preview\ 1.png);
 }
@@ -82,6 +126,66 @@ line-height: 58px;
 .end_slogan_text {
     color: #F16D7F;
 }
+.offers {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 65px;
+    margin-bottom: 96px;
+}
+.offers__block {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 31%;
+    height: 260px;
+    margin: 0 0 2.63% 0;
+}
+.offers__block:not(:last-child) {
+    width: 28%;
+    margin: 0 0 2.63% 0;
+    
+}
+.offers__women {
+    background: url(img/Layer\ 43.png);
+    background-size: cover;
+}
+.offers__women:hover {
+    -webkit-transform: scale(1.2) translate(0px, -20px);
+    transform: scale(1.2) translate(0px, -20px);
+    -webkit-transition: 0.7s;
+    transition: 0.7s;
+}
+.offers__block:last-child {
+    width: 100%;
+}
+.offers__accessories {
+    background: url(img/bg_acces.png), url(img/Rectangle\ 20.png);
+    background-size: cover;
+}
+.offers__accessories:hover {
+    -webkit-transform: scale(1.1) translate(0px, 20px);
+    transform: scale(1.1) translate(0px, 20px);
+    -webkit-transition: 0.7s;
+    transition: 0.7s;
+}
+.offers__block > a {
+    font-size: 16px;
+    line-height: 19px;
+    color: #FFFFFF;
+    text-align: center;
+    text-decoration: none;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    text-transform: uppercase;
+}
+
 .offer {
     display: flex;
     flex-direction: column;
@@ -107,6 +211,14 @@ line-height: 58px;
     align-items: center;
     justify-content: center;
     
+}
+.offers__block:not(:last-child) {
+    width: 31.58%;
+    margin: 0 0 2.63% 0;
+}
+.offers__women {
+    background: url(img/bg_for.png), url(img/Layer\ 43.png);
+    background-size: cover;
 }
 .men {
     width: 360px;
@@ -135,7 +247,7 @@ line-height: 58px;
 .accessoires {
     width: 100%;
     height: 180px;
-    background-image: url(img/Rectangle\ 20.png);
+    background-image: url(img/Rectangle\ 20.png), url(img/bg_for.png);
     margin-top: 30px;background-color: rgba(33, 22, 22, 0.7); 
     background-blend-mode: overlay;
     display: flex;
@@ -151,7 +263,14 @@ align-items: center;
 text-decoration: none;
 flex-direction: column;
 }
-.offers {
+.offers__block span {
+    font-size: 24px;
+    color: #F16D7F;
+    display: block;
+    font-weight: 700;
+    margin: 10px 0 0 0;
+}
+/* .offers {
     font-size: Lato;
     font-family: sans-serif;
     font-style: normal;
@@ -162,7 +281,7 @@ flex-direction: column;
     margin-block-start: 0;
     margin-block-end: 0;
 
-}
+} */
 .for {
     font-weight: 700;
     font-size: 24px;
@@ -199,6 +318,7 @@ margin-block-start: 0;
 
 .item_card:hover {
     box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16);
+
 }
 .item_card:hover .add-box {
     display: flex;
@@ -312,7 +432,7 @@ color: #F16D7F;
     
     background-image: url(img/Layer\ 41.png);
     background-position: left bottom;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     position: relative;
        
@@ -324,8 +444,7 @@ color: #F16D7F;
     position: absolute;
     top: 0px;
     background-color: rgba(244, 244, 244, 0.7);
-
-}
+    }
 
 
 .feedback {
@@ -388,6 +507,8 @@ margin-block-start: 0;
     border-radius: 20px 0 0 20px;
     border: none;
     padding-left: 25px;
+    font-size: 14px;
+    line-height: 17px;
     
 }
 .rightSub {
@@ -397,6 +518,20 @@ margin-block-start: 0;
     border-radius: 0 20px 20px 0;
     font-size: 14px;
     border: 1px solid #F16D7F;
+    color: #ffffff;
+}
+.rightSub:hover {
+    color: #F26376;
+    border: 1px solid #F26376;
+    background-color: #ffffff;
+}
+
+.clear-continue-button {
+    border: 1px solid #A4A4A4;
+    
+}
+.clear-continue-button:hover {
+    background-color: #F16D7F;
     color: #ffffff;
 }
 .bottom {
@@ -653,16 +788,6 @@ details .filter_text:hover {
 .filter_details[open] .filter_text {
     color: #EF5870;
 }
-
-
-/* details:hover filter__img {
-    opacity: 0;
-  }
-  
- details:hover {
-    background: url(img/filterRed.png) no-repeat 50% 50%;
-  } */
-
 .dropDetails {
     position: relative;
     z-index: 5;
@@ -690,7 +815,7 @@ margin: 0;
     color: #6F6E6E;  
 }
 .detailsItems_li:hover {
-    color: #000000;  
+    color: #EF5870;  
 }
 .filter_details[open] {
 background-color: white;
@@ -842,6 +967,14 @@ color: #575757;
     background-color: #F16D7F;
     border: none;
 }
+.checkout-button:hover {
+color: #F26376;
+    border: 1px solid #F26376;
+    background-color: #ffffff;
+}
+.checkout-button:hover .fa-arrow-right {
+    color: #F26376; 
+}
 legend {
 font-weight: 300;
 font-size: 16px;
@@ -919,6 +1052,23 @@ ul > .loyality_list_item:before{
         display: inline-block;
         visibility: visible;
         border: 2px solid white;
+    }
+    .fa-times {
+        position: absolute;
+        top: 16px;
+        right: 16px;
+        color: #6F6E6E;
+    }
+    .fa-times:hover {
+        color: #EF5870;
+    }
+    .burger_group_item {
+        color: #ffffff;
+        font-size: 25px;
+          }
+
+    .burger_group_item:hover {
+        color: #EF5870;
     }
 
     @media (min-width: 375px) 
